# streamdal

./: .cspell.json  .czrc  .editorconfig  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitignore.swp  .lintstagedrc.json  .prettier.config.cjs  .protolint.yml  .releaserc.json  .swcrc  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.MD  Makefile  README.md  __init__.py  app.py  astro.config.mjs  audience.go  audience_test.go  benchmarks_test.go  dataqual.go  dataqual_test.go  deno.json  deploy.dev.yaml  deploy.prod.yaml  docker-compose.dev.build.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  example.env  example.py  example.txt  fresh.config.ts  (+56 more)
.github.rename/: settings.yml
.github.rename/workflows/: master-build.yml
.github/workflows/: apps-cli-pr.yml  apps-cli-release.yml  apps-console-cov.yml  apps-console-pr.yml  apps-console-release.yml  apps-docs-pr.yml  apps-docs-publish.yml  apps-docs-release.yml  apps-log-processor-pr.yml  pr.yml  (+40 more)
api/: api.go  api_suite_test.go  api_test.go  basic_handlers.go
apps/: README.md
assets/: README.md  envoy-Dockerfile  envoy.yaml  nats-server.conf  snitch-server-Dockerfile
cmd/: cmd.go
common/: Cargo.toml  common.go  common_tinyjson.go
components/: customNodes.tsx  layout.tsx  test.json
config/: config.go  config_test.go  persistent.go
console/: colors.go  console.go
detective/: Cargo.toml  detective.go  detective_test.go  search.go
detective/src/: lib.rs
docs/: README.md
ecs/: ecs.yml.bk.private  role.yaml  rolebinding.yaml
examples/: README.md  package-lock.json  package.json  protobuf.rs  tsconfig.json  usage.rs
helm-charts/: README.MD  test
helm-charts-packages/: index.yaml  snitch-server-0.1.0.tgz  streamdal-server-0.1.0.tgz  streamdal-server-0.1.2.tgz  streamdal-server-0.1.4.tgz  streamdal-server-0.1.6.tgz
helper/: helper.go
hostfunc/: hostfunc.go  httprequest.go  kv.go
httprequest/: Cargo.toml
inferschema/: Cargo.toml
inferschema/src/: lib.rs
install/: README.md
integration/: package-lock.json  package.json  playwright.config.ts
islands/: Counter.tsx  Flow.tsx  InfoModal.tsx  customNodes.tsx  emailCollectionForm.tsx  flow.tsx  nav.tsx  notification.tsx  notifications.tsx  opModal.tsx  operationOpModal.tsx  peek.tsx  pipeline.tsx  pipelines.tsx  serviceMap.tsx  tail.tsx
kv/: Cargo.toml  kv.go  kv_suite_test.go  kv_test.go
kv/kvfakes/: fake_ikv.go
kv/src/: lib.rs
lib/: audienceMetrics.ts  configs.ts  dummies.ts  edgeMetrics.ts  fetch.ts  grpc.ts  metrics.ts  mutation.ts  nodeMapper.ts  peek.ts  serviceMap.ts  serviceMapper.ts  sockets.ts  stream.ts  tail.ts  utils.ts
libs/: README.md
libs/wasm-detective/: BENCHMARKS.md  Cargo.toml  Makefile  README.md
libs/wasm-detective/.github/workflows/: release.yaml
libs/wasm-detective/assets/: keywords.toml
libs/wasm-detective/assets/test-payloads/: escaped_json_logs.txt  large.json  medium.json  small.json
libs/wasm-detective/examples/: usage.rs
libs/wasm-detective/src/: detective.rs  error.rs  lib.rs  matcher_core.rs  matcher_core_tests.rs  matcher_numeric.rs  matcher_numeric_tests.rs  matcher_pii.rs  matcher_pii_cloud.rs  matcher_pii_cloud_tests.rs  matcher_pii_keywords.rs  matcher_pii_payments.rs  matcher_pii_payments_tests.rs  matcher_pii_phone.rs  matcher_pii_phone_tests.rs  matcher_pii_tests.rs  test_bench.rs  test_utils.rs
libs/wasm-detective/src/keywords/: config.rs  mod.rs  scanner.rs  test_scanner.rs
libs/wasm-transform/: Cargo.toml  README.md
libs/wasm-transform/.github/workflows/: pr.yaml  release.yaml
libs/wasm-transform/examples/: usage.rs
libs/wasm-transform/src/: lib.rs  test_utils.rs  transform.rs
libs/wasm/custom/: Cargo.toml
libs/wasm/custom/src/: lib.rs
libs/wasm/detective/: Cargo.toml
libs/wasm/detective/src/: lib.rs
libs/wasm/kv/: Cargo.toml
libs/wasm/kv/src/: lib.rs
libs/wasm/schemavalidation/: Cargo.toml
libs/wasm/schemavalidation/src/: lib.rs
libs/wasm/transform/: Cargo.toml
libs/wasm/transform/src/: lib.rs
libs/wasm/validjson/: Cargo.toml
libs/wasm/validjson/src/: lib.rs
logger/: logger.go
metrics/: __init__.py  counter.go  counter_test.go  metrics.go  metrics_test.go
plumber/: plumber.go
protos/: bus.proto  client.proto  command.proto  common.proto  external.proto  external_api.proto  go.mod  grpc_internal.proto  grpc_public.proto  info.proto  internal.proto  internal_api.proto  kv.proto  notify.proto  pipeline.proto  sp_bus.proto  sp_command.proto  sp_common.proto  sp_external.proto  sp_hostfunc.proto  sp_info.proto  sp_internal.proto  sp_kv.proto  sp_notify.proto  sp_pipeline.proto  sp_uibff.proto  sp_wasm.proto  sp_wsm.proto  wasm.proto
quickstart/: README.MD
routes/: [info].tsx  _500.tsx  _app.tsx  _layout.tsx  _middleware.ts  email.tsx  flow.tsx  grpc.tsx  index.tsx  login.tsx
scripts/: README.md  vaultelier.py
server/: client.go
snitch-server-helm/: index.yaml  snitch-0.1.0.tgz  values.yaml
snitchpy/: __init__.py  exceptions.py
src/: config.ts  detective.rs  detective.ts  env.d.ts  error.rs  heartbeat.ts  index.js  index.ts  json.go  lib.rs  match.go  matcher_core.rs  matcher_core_tests.rs  matcher_numeric.rs  matcher_numeric_tests.rs  matcher_pii.rs  matcher_pii_tests.rs  metrics.ts  pipeline.ts  process.ts  register.ts  snitch.ts  streamdal.ts  string_contains.go  test_bench.rs  test_utils.rs  transform.go  transform.rs  wasm.ts
static/: style.css
streamdal/: __init__.py
test-utils/: reset.sh
testing/: center.go  centered-input.go  demo-form.go  rgbjson.go
tests/: go.mod  go.sum  wasm_suite_test.go  wasm_test.go
transform/: Cargo.toml
transform/src/: lib.rs
transformer/: Cargo.toml
types/: types.go
util/: redirect_all.go  redirect_windows.go  util.go  util_test.go
validate/: validate.go  validate_test.go
validation/: commands.go  detective.wasm.mod.yaml  httprequest.wasm.mod.yaml  inferschema.wasm.mod.yaml  kv.wasm.mod.yaml  transform.wasm.mod.yaml  validjson.wasm.mod.yaml
validjson/: Cargo.toml
validjson/src/: lib.rs
wasm/: wasm.go  wasm_test.go
(+1621 files in other folders)
