[package]
name = "streamdal-wasm-detective"
version = "0.0.35"
edition = "2021"
license = "MIT"
description = "Data matcher library used by Streamdal WASM functions"
categories = ["parser-implementations", "wasm"]
keywords = ["protobuf", "json", "match", "wasm"]
repository = "https://github.com/streamdal/wasm-detective"

[dependencies]
ajson = "0.3.1"
bencher = "0.1.5"
chrono = "0.4.26"
env_logger = "0.10.0"
gjson = "0.8.1"
idna = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.19"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
regex = "1.8.4"
semver = "1.0.17"
streamdal-protos = "0.0.120"
thiserror = "1.0.40"
url = "2.4.0"
