[package]
name = "inferschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
infers-jsonschema = "0.1.0"
serde_json = "1.0.107"
protobuf = "3.2.0"
common = { path = "../common" }
snitch-protos = "0.0.97"
serde_json_diff = "0.2.0"

[profile.release]
lto = true
