[package]
name = "validjson"
version = "0.0.120"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
protobuf = "3.2.0"
streamdal-protos = "0.0.120"
common = { path = "../common" }
serde_json = "1.0.108"

[profile.release]
lto = true

