[package]
name = "streamdal-wasm-detective"
version = "0.0.39"
edition = "2021"
license = "MIT"
description = "Data matcher library used by Streamdal WASM functions"
categories = ["parser-implementations", "wasm"]
keywords = ["protobuf", "json", "match", "wasm"]
repository = "https://github.com/streamdal/wasm-detective"

[dependencies]
ajson = "0.3.1"
bencher = "0.1.5"
chrono = "0.4.26"
env_logger = "0.10.0"
iban_validate = "4.0.1"
idna = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.19"
protobuf = "3.4.0"
protobuf-json-mapping = "3.2.0"
regex = "1.8.4"
semver = "1.0.17"
streamdal-gjson = "0.8.3-add-traits"
streamdal-protos = { path = "../protos/build/rust/protos"}
thiserror = "1.0.40"
url = "2.4.0"
uuid = "1.6.1"
validators = "0.25.3"
sha2 = "0.11.0-pre.3"
bs58 = "0.5.0"
toml = "0.8.12"
rand = "0.8.5"
unicode-segmentation = { version = "1.11.0", features = ["no_std"] }
any_ascii = "0.3.2"
