[package]
name = "streamdal-wasm-transform"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "JSON data transformation lib used by snitch components"
categories = ["data-structures", "encoding", "data-manipulation"]
keywords = ["json", "replace", "transform", "snitch", "obfuscate"]
repository = "https://github.com/streamdal/wasm-transform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
sha256 = "= 1.1.4"
streamdal-gjson = "0.8.2-delete-path"
streamdal-protos = "= 0.1.6"
