[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
protobuf = "3.2.0"
streamdal-protos = "0.1.8"
common = { path = "../common" }
streamdal-wasm-detective = "0.0.30"
