[package]
name = "schemavalidation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.111"
serde_json_diff = "0.2.0"
streamdal-protos = { path="../../protos/build/rust/protos" }
common = { path = "../common" }
jsonschema-valid = "0.5.2"
protobuf = "3.3.0"

[profile.release]
lto = true
opt-level = 'z'
