[package]
name = "transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
protobuf = "3.2.0"
streamdal-protos = "0.0.120"
streamdal-wasm-transform = "0.0.10"
common = { path = "../common" }

[profile.release]
lto = true
